--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "react-use-gesture": "^9.1.3",
+    "sass": "^1.85.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.4"
